--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
     @media (max-width: 980px){ .hero{grid-template-columns:1fr} .contact{grid-template-columns:1fr} }
     footer{margin-top:50px; padding: 30px 0; border-top:1px solid rgba(148,163,184,.3); color:var(--muted); font-size:14px; text-align:center; background:#f1f5f9}
     img{max-width:100%; border-radius: var(--radius)}
-    input, textarea, select{
-      width:100%; padding:10px; margin:6px 0 14px; border-radius:10px; border:1px solid #cbd5e1;
-    }
   </style>
 </head>
 <body>
@@ -83,17 +80,14 @@
         <img src="https://i.pinimg.com/736x/da/92/c0/da92c0822d00a3836be0ff75dd6921ad.jpg" width="200">
         <img src="https://i.pinimg.com/736x/7f/ae/73/7fae73cbfae78025b44a9a3bc1e9a48f.jpg" width="180">
         <img src="https://i.pinimg.com/736x/d5/c3/b7/d5c3b74fee6c455460c5aa88bb6d41bc.jpg" width="210">
-      
-
       </div>
     </section>
 
-    <!-- NUEVA SECCIÓN DE SERVICIOS INTERACTIVOS -->
     <section id="servicios" class="section">
       <h2>Servicios de Psicopedagogía</h2>
       <p>Fortalecemos el aprendizaje y el bienestar desde la infancia hasta la adultez.</p>
       <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; margin-top:20px">
-        
+        <!-- servicios iguales a tu código original -->
         <div class="service" onclick="toggleService(this)">
           <div style="display:flex; align-items:center; gap:10px;">
             <img src="https://cdn-icons-png.flaticon.com/512/2942/2942789.png" width="60">
@@ -103,7 +97,6 @@
             Realizamos un análisis completo del desarrollo del aprendizaje del niño, adolescente o adulto, incluyendo pruebas estandarizadas y evaluación de habilidades cognitivas, memoria, lenguaje y competencias académicas. Esto nos permite identificar necesidades, fortalezas y diseñar un plan de intervención personalizado.
           </p>
         </div>
-
         <div class="service" onclick="toggleService(this)">
           <div style="display:flex; align-items:center; gap:10px;">
             <img src="https://cdn-icons-png.flaticon.com/512/2922/2922730.png" width="60">
@@ -113,7 +106,6 @@
             Brindamos sesiones individualizadas para reforzar áreas específicas del aprendizaje, como lectura, escritura, matemáticas y comprensión lectora. Cada sesión se adapta a las necesidades del estudiante, fomentando la confianza y la motivación hacia el aprendizaje.
           </p>
         </div>
-
         <div class="service" onclick="toggleService(this)">
           <div style="display:flex; align-items:center; gap:10px;">
             <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" width="60">
@@ -123,7 +115,6 @@
             Diseñamos estrategias y planes personalizados para personas con TDAH o Trastorno del Espectro Autista, fomentando habilidades de atención, comunicación funcional, regulación emocional y competencias sociales, promoviendo un desarrollo integral y participativo.
           </p>
         </div>
-
         <div class="service" onclick="toggleService(this)">
           <div style="display:flex; align-items:center; gap:10px;">
             <img src="https://cdn-icons-png.flaticon.com/512/3062/3062634.png" width="60">
@@ -133,7 +124,6 @@
             Apoyamos a las familias en la creación de rutinas saludables, establecimiento de límites y desarrollo de hábitos de estudio efectivos. Ofrecemos herramientas de crianza positiva para fortalecer el vínculo familiar y el acompañamiento en el proceso educativo.
           </p>
         </div>
-
         <div class="service" onclick="toggleService(this)">
           <div style="display:flex; align-items:center; gap:10px;">
             <img src="https://cdn-icons-png.flaticon.com/512/3062/3062641.png" width="60">
@@ -143,7 +133,6 @@
             Colaboramos con docentes y centros educativos para implementar adaptaciones curriculares y estrategias pedagógicas que faciliten el aprendizaje. Acompañamos al estudiante dentro del aula y ofrecemos seguimiento personalizado según sus necesidades.
           </p>
         </div>
-
         <div class="service" onclick="toggleService(this)">
           <div style="display:flex; align-items:center; gap:10px;">
             <img src="https://cdn-icons-png.flaticon.com/512/1161/1161388.png" width="60">
@@ -153,56 +142,22 @@
             Ofrecemos refuerzo de contenidos, técnicas de estudio y preparación para exámenes en diferentes materias. Nuestras tutorías están diseñadas para mejorar la comprensión, fomentar la autonomía en el aprendizaje y aumentar la seguridad del estudiante en su desempeño académico.
           </p>
         </div>
-
       </div>
     </section>
 
-    <!-- SECCIÓN DE CONTACTO Y FORMULARIO GOOGLE CALENDAR -->
     <section id="contacto" class="section">
-      <h2>Contacto</h2>
-      <p>Escríbenos o llámanos. Agenda tu cita en la fecha y hora que prefieras.</p>
+      <h2>Contacto / Agendar cita</h2>
+      <p>Selecciona una fecha y hora para tu cita.</p>
       <div class="contact" style="margin-top:16px">
-        <div class="card">
-          <form onsubmit="return abrirGoogleCalendar(event)">
-            <label>Nombre:<br><input type="text" name="nombre" required></label><br>
-            <label>Correo:<br><input type="email" name="correo" required></label><br>
-            <label>Teléfono:<br><input type="tel" name="telefono"></label><br>
-            <label>Fecha de la cita:<br><input type="date" name="fecha" required style="
-              padding:12px; border-radius:12px; border:1px solid #0284c7; background:#ecfeff; font-weight:600; color:#0e7490;
-              cursor:pointer; transition:all .2s ease;" 
-              onmouseover="this.style.boxShadow='0 4px 12px rgba(0,0,0,0.2)';" 
-              onmouseout="this.style.boxShadow='none';"></label><br>
-            <label>Hora de la cita:<br>
-              <select name="hora" required style="
-                width:100%; padding:12px; border-radius:12px; border:1px solid #0284c7; background:#ecfeff; font-weight:600; color:#0e7490;
-                cursor:pointer; transition:all .2s ease;" 
-                onmouseover="this.style.boxShadow='0 4px 12px rgba(0,0,0,0.2)';" 
-                onmouseout="this.style.boxShadow='none';">
-                <option value="">Selecciona la hora</option>
-                <option value="08:00">08:00</option>
-                <option value="09:00">09:00</option>
-                <option value="10:00">10:00</option>
-                <option value="11:00">11:00</option>
-                <option value="12:00">12:00</option>
-                <option value="13:00">13:00</option>
-                <option value="14:00">14:00</option>
-                <option value="15:00">15:00</option>
-                <option value="16:00">16:00</option>
-              </select>
-            </label><br>
-            <label>Mensaje:<br><textarea name="mensaje" required></textarea></label><br>
-            <button class="btn" type="submit">Agendar cita</button>
-          </form>
-        </div>
-        <div class="card">
-          <h3>Datos de contacto</h3>
-          <p><b>Correo:</b> <a href="mailto:Ni.valeria2021@gmail.com">Ni.valeria2021@gmail.com</a></p>
-          <p><b>Teléfono:</b> <a href="tel:+50684829511">84829511</a></p>
-          <p><b>Instagram:</b> <a href="https://www.instagram.com/psicopedagogia_entre_lineas/?utm_source=qr&igsh=ZGdzYTl3eHczbDR6#"> Psicopedagogia_Entre_Lineas</a></p>
-          <p><b>Facebook:</b> <a href="https://www.facebook.com/share/16oiwdzcWm/"> Psicopedagogia_Entre_Lineas</a></p>
-
-          <p><b>Modalidad:</b> Presencial y en línea</p>
-          <img src="https://img.freepik.com/free-vector/teacher-concept-illustration_114360-2167.jpg" alt="Ilustración de contacto">
+        <!-- Aquí incrustamos Reservio con iframe -->
+        <div class="card" style="grid-column: span 2;">
+          <iframe 
+            src="https://entre-lineas-psicopedagogia.reservio.com"
+            width="100%" 
+            height="800" 
+            frameborder="0" 
+            style="border-radius: var(--radius); box-shadow: var(--shadow);">
+          </iframe>
         </div>
       </div>
     </section>
@@ -215,7 +170,6 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // ACORDEÓN DE SERVICIOS
     function toggleService(el){
       const p = el.querySelector('p');
       const all = document.querySelectorAll('#servicios .service p');
@@ -224,24 +178,9 @@
       });
       p.style.display = p.style.display === 'block' ? 'none' : 'block';
     }
-
-    // GOOGLE CALENDAR
-    function abrirGoogleCalendar(e){
-      e.preventDefault();
-      const f = e.target;
-      const nombre = encodeURIComponent(f.nombre.value);
-      const correo = encodeURIComponent(f.correo.value);
-      const telefono = encodeURIComponent(f.telefono.value);
-      const fecha = f.fecha.value.replace(/-/g,''); // YYYYMMDD
-      const hora = f.hora.value.replace(':','')+'00'; // HHMMSS
-      const start = fecha+'T'+hora+'Z';
-      const title = encodeURIComponent('Cita Psicopedagogía - '+decodeURIComponent(nombre));
-      const details = encodeURIComponent('Nombre: '+decodeURIComponent(nombre)+'\nCorreo: '+decodeURIComponent(correo)+'\nTeléfono: '+decodeURIComponent(telefono));
-      const url = `https://calendar.google.com/calendar/u/0/r/eventedit?text=${title}&dates=${start}/${start}&details=${details}`;
-      window.open(url,'_blank');
-      return false;
-    }
   </script>
 </body>
 </html>
+
+
 
