--- a/index.html
+++ b/index.html
@@ -176,11 +176,27 @@
       all.forEach(desc => {
         if(desc !== p) desc.style.display = 'none';
       });
-      p.style.display = p.style.display === 'block' ? 'none' : 'block';
+      p.style.display = p.style.display === 'block' ? 'none' : 'block'; <!-- Datos de contacto -->
+      <div class="card contact-info">
+        <h3>Datos de contacto</h3>
+        <p><b>Correo:</b> <a href="mailto:Ni.valeria2021@gmail.com">Ni.valeria2021@gmail.com</a></p>
+        <p><b>Teléfono:</b> <a href="tel:+50684829511">84829511</a></p>
+        <p><b>Instagram:</b> <a href="https://www.instagram.com/psicopedagogia_entre_lineas/" target="_blank"> Psicopedagogia_Entre_Lineas</a></p>
+        <p><b>Facebook:</b> <a href="https://www.facebook.com/share/16oiwdzcWm/" target="_blank"> Psicopedagogia_Entre_Lineas</a></p>
+        <p><b>Modalidad:</b> Presencial y en línea</p>
+        <img src="https://img.freepik.com/free-vector/teacher-concept-illustration_114360-2167.jpg" alt="Ilustración de contacto" style="max-width:250px; margin-top:10px;">
+      </div>
+    </section>
+  </main>
+
+
+      
     }
   </script>
 </body>
 </html>
+
+
 
 
 
